[project]
name = "safespace-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.3",
    "langchain>=1.2.9",
    "langchain-openai>=1.1.7",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "twilio>=9.10.1",
    "uvicorn>=0.40.0",
]
